--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -14,7 +14,7 @@
         // margin-top: 30px;
         box-shadow: $box-shadow;
         position: sticky;
-        top: calc(#{header-height} + 20px);
+        top: calc(#{$header-height} + 20px);
         padding-top: 0;
 
         &__txt {
@@ -99,7 +99,7 @@
         @include flex(center, center);
         background-color: #fff3cd;
 
-        margin-top: calc(#{$header-height} + 20px);
+         margin-top: calc(#{$header-height} + 21px);
 
 
         @include mobile {
