fixed shopping cart

--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -10,12 +10,16 @@
     &__info {
         // width: 40%;
         margin-right: 30px;
-        padding:20px;
+        padding:20px 0;
         // margin-top: 30px;
         box-shadow: $box-shadow;
-        position: sticky;
+        // position: sticky;
         top: calc(#{$header-height} + 20px);
         padding-top: 0;
+
+        @include mobile {
+            top: calc(#{$header-mobile-height} + 20px);
+        }
 
         &__txt {
             & > * {
@@ -54,8 +58,10 @@
 
     &__item {
         @include flex(center, flex-start);
+
         margin-bottom: 20px;
 
+       
         
         &__image {
             margin-right: 20px;
@@ -63,36 +69,71 @@
             margin-top: 20px;
 
             img {
-                height: 150px;
+                height: 100px;
+
+                @include mobile {
+                    height: 120px;
+                }
             }
         }
 
         &__info {
             @include flex(center, space-between);
             flex-grow: 1;
+
+            flex-wrap: wrap;
             
             &__name{
                 width: 40%;
+
+                @include mobile {
+                    width:100%;
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+
+                a{
+                    @include mobile {
+                        font-size: 12px;
+                    }
+                }
+
+                p {
+                    cursor: pointer;
+                    margin-top: 10px;
+                    text-decoration: underline;
+                    font-size: 12px;
+
+                    @include mobile {
+                        margin-top: 0;
+                        margin-right: 10px;
+                    }
+
+                    &:hover {
+                        color: $main-color;
+                    }
+                }
             }
 
             &__name, &__price {
                 font-size: 1.25rem;
-            }
 
-        }
-        &__del {
-            font-size: 1.5rem;
-          
-
-            i {
-                cursor: pointer;
-
-                &:hover {
-                    color:  $main-color;
+                 @include mobile {
+                    width:100%;
+                    margin-bottom: 10px;
                 }
-
             }
+
+            &__quantity {
+
+                @include mobile {
+                    margin-left: 0;
+                }
+            }
+
         }
+       
     }
 
     &__zero {
