--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -23,6 +23,10 @@
 @import './components/product-view-modal';
 @import './components/product-view2';
 @import './components/cart';
+@import './components/container3';
+@import './components/show-item';
+
+
 
 
 
